--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -69,44 +69,18 @@
 							<th>扶養人数</th>
 						</tr>
 					</thead>
-					<tbody>
+					<tbody th:each="employee:${employeeList}">
 						<tr>
 							<td>
-								<a href="detail.html">
-									<span>山田太郎</span>
+								<a href="detail.html" th:href="@{'/employee/showDetail?id='+${employee.id}}">
+									<span th:text="${employee.name}">山田太郎</span>
 								</a>
 							</td>
 							<td>
-								<span>2016/12/1</span>
+								<span th:text="${employee.hireDate}">2016/12/1</span>
 							</td>
 							<td>
-								<span>3人</span>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<a href="detail.html">
-									<span>山田太郎</span>
-								</a>
-							</td>
-							<td>
-								<span>2016/12/1</span>
-							</td>
-							<td>
-								<span>3人</span>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<a href="detail.html">
-									<span>山田太郎</span>
-								</a>
-							</td>
-							<td>
-								<span>2016/12/1</span>
-							</td>
-							<td>
-								<span>3人</span>
+								<span th:text="${employee.dependentsCount}">3</span>人
 							</td>
 						</tr>
 					</tbody>
