--- a/src/main/resources/templates/administrator/insert.html
+++ b/src/main/resources/templates/administrator/insert.html
@@ -40,7 +40,7 @@
 										<label for="name">
 											氏名:
 										</label>
-										<label class="error-messages" th:if="]${#fields.hasErrors('name')}" th:errors="*{name}">
+										<label class="error-messages" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
 											氏名を入力してください
 										</label>
 										<input type="text" name="name" id="name" class="form-control" placeholder="山田太郎" th:field="*{name}" >
