--- a/src/main/resources/templates/employee/header.html
+++ b/src/main/resources/templates/employee/header.html
@@ -33,6 +33,7 @@
 					id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="list.html" th:href="@{/employee/showList}">従業員管理</a></li>
+						<li class="active"><a href="information.html" th:href="@{/infomation}">管理者情報</a></li>
 					</ul>
 					<p class="navbar-text navbar-right">
 						<span th:text="${session.administratorName + 'さん'}">山田さん</span>こんにちは！
