--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -52,6 +52,11 @@
 						</tr>
 					</tbody>
 				</table>
+				<div>
+					<a href="list.html" th:if="${page}>1" th:href="@{'/employee/showList?page='+${page-1}}">前へ</a>
+					<span th:text="${page}">1</span>
+					<a href="list.html" th:if="${page}!=${size}" th:href="@{'/employee/showList?page='+${page+1}}">次へ</a>
+				</div>
 
 
 
